--- a/java/res/values-rm/strings.xml
+++ b/java/res/values-rm/strings.xml
@@ -63,6 +63,8 @@
     <skip />
     <!-- no translation found for abbreviation_unit_milliseconds (8700286094028323363) -->
     <skip />
+    <!-- no translation found for settings_system_default (6268225104743331821) -->
+    <skip />
     <!-- no translation found for use_contacts_dict (4435317977804180815) -->
     <skip />
     <!-- no translation found for use_contacts_dict_summary (6599983334507879959) -->
