Import translations. DO NOT MERGE
Change-Id: Ifa31ddbf181a2774a2e375123079e8e8a1dc51a9
Auto-generated-cl: translation import
Exempt-From-Owner-Approval: translation import

--- a/java/res/values-pa/strings.xml
+++ b/java/res/values-pa/strings.xml
@@ -100,7 +100,7 @@
     <string name="account_selected" msgid="2846876462199625974">"ਇਸ ਵੇਲੇ <xliff:g id="EMAIL_ADDRESS">%1$s</xliff:g> ਵਰਤ ਰਿਹਾ ਹੈ"</string>
     <string name="account_select_ok" msgid="9141195141763227797">"ਠੀਕ"</string>
     <string name="account_select_cancel" msgid="5181012062618504340">"ਰੱਦ ਕਰੋ"</string>
-    <string name="account_select_sign_out" msgid="3299651159390187933">"ਸਾਈਨ ਆਉਟ ਕਰੋ"</string>
+    <string name="account_select_sign_out" msgid="3299651159390187933">"ਸਾਈਨ-ਆਊਟ ਕਰੋ"</string>
     <string name="account_select_title" msgid="6279711684772922649">"ਵਰਤਣ ਲਈ ਇੱਕ ਖਾਤਾ ਚੁਣੋ"</string>
     <string name="subtype_en_GB" msgid="88170601942311355">"ਅੰਗ੍ਰੇਜ਼ੀ (ਯੂਕੇ)"</string>
     <string name="subtype_en_US" msgid="6160452336634534239">"ਅੰਗ੍ਰੇਜੀ (ਅਮਰੀਕਾ)"</string>
