--- a/java/res/values-te/strings.xml
+++ b/java/res/values-te/strings.xml
@@ -175,7 +175,7 @@
     <string name="no_dictionaries_available" msgid="8039920716566132611">"నిఘంటువులు ఏవీ అందుబాటులో లేవు"</string>
     <string name="check_for_updates_now" msgid="8087688440916388581">"రీఫ్రెష్ చేయండి"</string>
     <string name="last_update" msgid="730467549913588780">"చివరిగా నవీకరించబడినది"</string>
-    <string name="message_updating" msgid="4457761393932375219">"నవీకరణల కోసం తనిఖీ చేస్తోంది"</string>
+    <string name="message_updating" msgid="4457761393932375219">"అప్‌డేట్‌ల కోసం తనిఖీ చేస్తోంది"</string>
     <string name="message_loading" msgid="5638680861387748936">"లోడ్ చేస్తోంది…"</string>
     <string name="main_dict_description" msgid="3072821352793492143">"ప్రధాన నిఘంటువు"</string>
     <string name="cancel" msgid="6830980399865683324">"రద్దు చేయి"</string>
@@ -197,10 +197,10 @@
     <string name="user_dict_settings_add_dialog_less_options" msgid="2716586567241724126">"తక్కువ ఎంపికలు"</string>
     <string name="user_dict_settings_add_dialog_confirm" msgid="4703129507388332950">"సరే"</string>
     <string name="user_dict_settings_add_word_option_name" msgid="6665558053408962865">"పదం:"</string>
-    <string name="user_dict_settings_add_shortcut_option_name" msgid="3094731590655523777">"సత్వరమార్గం:"</string>
+    <string name="user_dict_settings_add_shortcut_option_name" msgid="3094731590655523777">"షార్ట్‌కట్:"</string>
     <string name="user_dict_settings_add_locale_option_name" msgid="4738643440987277705">"భాష:"</string>
     <string name="user_dict_settings_add_word_hint" msgid="4902434148985906707">"పదాన్ని టైప్ చేయండి"</string>
-    <string name="user_dict_settings_add_shortcut_hint" msgid="2265453012555060178">"ఐచ్ఛిక సత్వరమార్గం"</string>
+    <string name="user_dict_settings_add_shortcut_hint" msgid="2265453012555060178">"ఐచ్ఛిక షార్ట్‌కట్"</string>
     <string name="user_dict_settings_edit_dialog_title" msgid="3765774633869590352">"పదాన్ని సవరించు"</string>
     <string name="user_dict_settings_context_menu_edit_title" msgid="6812255903472456302">"సవరించు"</string>
     <string name="user_dict_settings_context_menu_delete_title" msgid="8142932447689461181">"తొలగించు"</string>
