Import translations. DO NOT MERGE
Change-Id: I82167810683476283d148579648330e5486366ad
Auto-generated-cl: translation import
Exempt-From-Owner-Approval: translation import

--- a/java/res/values-kn/strings.xml
+++ b/java/res/values-kn/strings.xml
@@ -173,7 +173,7 @@
     <string name="dictionary_disabled" msgid="8950383219564621762">"ಸ್ಥಾಪಿಸಲಾಗಿದೆ, ನಿಷ್ಕ್ರಿಯಗೊಳಿಸಲಾಗಿದೆ"</string>
     <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"ನಿಘಂಟು ಸೇವೆಗೆ ಸಂಪರ್ಕಗೊಳಿಸುವಾಗ ಸಮಸ್ಯೆ"</string>
     <string name="no_dictionaries_available" msgid="8039920716566132611">"ನಿಘಂಟುಗಳು ಲಭ್ಯವಿಲ್ಲ"</string>
-    <string name="check_for_updates_now" msgid="8087688440916388581">"ರೀಫ್ರೆಶ್ ಮಾಡಿ"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"ರಿಫ್ರೆಶ್ ಮಾಡಿ"</string>
     <string name="last_update" msgid="730467549913588780">"ಕೊನೆಯದಾಗಿ ನವೀಕರಿಸಿರುವುದು"</string>
     <string name="message_updating" msgid="4457761393932375219">"ನವೀಕರಣಗಳಿಗಾಗಿ ಪರಿಶೀಲಿಸಲಾಗುತ್ತಿದೆ"</string>
     <string name="message_loading" msgid="5638680861387748936">"ಲೋಡ್ ಮಾಡಲಾಗುತ್ತಿದೆ..."</string>
