--- a/java/res/values-ta/strings.xml
+++ b/java/res/values-ta/strings.xml
@@ -156,8 +156,8 @@
     <string name="setup_step3_instruction" msgid="8025981829605426000">"<xliff:g id="APPLICATION_NAME">%s</xliff:g> பயன்பாடு மூலம் உங்களுக்கு விருப்பமான எல்லா பயன்பாடுகளிலும் நீங்கள் உள்ளிடலாம்."</string>
     <string name="setup_step3_action" msgid="600879797256942259">"கூடுதல் மொழிகளை உள்ளமை"</string>
     <string name="setup_finish_action" msgid="276559243409465389">"முடிந்தது"</string>
-    <string name="show_setup_wizard_icon" msgid="5008028590593710830">"பயன்பாட்டு ஐகானைக் காட்டு"</string>
-    <string name="show_setup_wizard_icon_summary" msgid="4119998322536880213">"துவக்கியில் பயன்பாட்டு ஐகானைக் காட்டும்"</string>
+    <string name="show_setup_wizard_icon" msgid="5008028590593710830">"ஆப்ஸ் ஐகானைக் காட்டு"</string>
+    <string name="show_setup_wizard_icon_summary" msgid="4119998322536880213">"துவக்கியில் ஆப்ஸ் ஐகானைக் காட்டும்"</string>
     <string name="app_name" msgid="6320102637491234792">"அகராதி வழங்கி"</string>
     <string name="dictionary_provider_name" msgid="3027315045397363079">"அகராதி வழங்கி"</string>
     <string name="dictionary_service_name" msgid="6237472350693511448">"அகராதி சேவை"</string>
@@ -197,10 +197,10 @@
     <string name="user_dict_settings_add_dialog_less_options" msgid="2716586567241724126">"குறைவான விருப்பங்கள்"</string>
     <string name="user_dict_settings_add_dialog_confirm" msgid="4703129507388332950">"சரி"</string>
     <string name="user_dict_settings_add_word_option_name" msgid="6665558053408962865">"வார்த்தை:"</string>
-    <string name="user_dict_settings_add_shortcut_option_name" msgid="3094731590655523777">"குறுக்குவழி:"</string>
+    <string name="user_dict_settings_add_shortcut_option_name" msgid="3094731590655523777">"ஷார்ட்கட்:"</string>
     <string name="user_dict_settings_add_locale_option_name" msgid="4738643440987277705">"மொழி:"</string>
     <string name="user_dict_settings_add_word_hint" msgid="4902434148985906707">"வார்த்தையை உள்ளிடவும்"</string>
-    <string name="user_dict_settings_add_shortcut_hint" msgid="2265453012555060178">"விருப்பத்திற்குரிய குறுக்குவழி"</string>
+    <string name="user_dict_settings_add_shortcut_hint" msgid="2265453012555060178">"விருப்பத்திற்குரிய ஷார்ட்கட்"</string>
     <string name="user_dict_settings_edit_dialog_title" msgid="3765774633869590352">"வார்த்தையைத் திருத்து"</string>
     <string name="user_dict_settings_context_menu_edit_title" msgid="6812255903472456302">"திருத்து"</string>
     <string name="user_dict_settings_context_menu_delete_title" msgid="8142932447689461181">"நீக்கு"</string>
