--- a/java/res/values-bs/strings.xml
+++ b/java/res/values-bs/strings.xml
@@ -22,14 +22,14 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="english_ime_input_options" msgid="3909945612939668554">"Mogućnosti unosa"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"Korištenje imena kontakata"</string>
-    <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"Alat za provjeru pravopisa koristi upise iz vaše liste kontakata"</string>
+    <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"Provjera pravopisa koristi upise s vaše liste kontakata"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"Vibracija pri pritisku na tipku"</string>
     <string name="sound_on_keypress" msgid="6093592297198243644">"Zvuk pri pritisku tipke"</string>
     <string name="popup_on_keypress" msgid="123894815723512944">"Iskačuči prozor pri pritisku na tipku"</string>
     <string name="settings_screen_preferences" msgid="2696713156722014624">"Postavke"</string>
     <string name="settings_screen_accounts" msgid="2786418968536696670">"Računi i privatnost"</string>
     <string name="settings_screen_appearance" msgid="7358046399111611615">"Izgled i rasporedi tipki"</string>
-    <string name="settings_screen_gesture" msgid="8826372746901183556">"Kucanje pokretima"</string>
+    <string name="settings_screen_gesture" msgid="8826372746901183556">"Pisanje pokretima"</string>
     <string name="settings_screen_correction" msgid="1616818407747682955">"Ispravka teksta"</string>
     <string name="settings_screen_advanced" msgid="7472408607625972994">"Napredno"</string>
     <string name="settings_screen_theme" msgid="2137262503543943871">"Tema"</string>
@@ -78,7 +78,7 @@
     <string name="auto_correction_threshold_mode_very_aggressive" msgid="1853309024129480416">"Veoma napadno"</string>
     <string name="bigram_prediction" msgid="1084449187723948550">"Prijedlozi za sljedeću riječ"</string>
     <string name="bigram_prediction_summary" msgid="3896362682751109677">"Prilikom odlučivanja koristi prethodno"</string>
-    <string name="gesture_input" msgid="826951152254563827">"Omogućite kucanje pokretima"</string>
+    <string name="gesture_input" msgid="826951152254563827">"Omogućite pisanje pokretima"</string>
     <string name="gesture_input_summary" msgid="9180350639305731231">"Unesite riječ klizanjem prstom preko slova"</string>
     <string name="gesture_preview_trail" msgid="3802333369335722221">"Prikaži trag pokreta"</string>
     <string name="gesture_floating_preview_text" msgid="4443240334739381053">"Pregled dinamičkim lebdenjem"</string>
@@ -136,12 +136,12 @@
     <string name="custom_input_style_already_exists" msgid="8008728952215449707">"Već postoji isti stil unosa: <xliff:g id="INPUT_STYLE_NAME">%s</xliff:g>"</string>
     <string name="prefs_keypress_vibration_duration_settings" msgid="7918341459947439226">"Trajanje vibracije pritisnute tipke"</string>
     <string name="prefs_keypress_sound_volume_settings" msgid="6027007337036891623">"Jačina zvuka pritisnute tipke"</string>
-    <string name="prefs_key_longpress_timeout_settings" msgid="6102240298932897873">"Odgoda dugog pritiska tipke"</string>
+    <string name="prefs_key_longpress_timeout_settings" msgid="6102240298932897873">"Odgoda dugim pritiskom tipke"</string>
     <string name="prefs_enable_emoji_alt_physical_key" msgid="5963640002335470112">"Emoji za fizičku tastaturu"</string>
     <string name="prefs_enable_emoji_alt_physical_key_summary" msgid="5259484820941627827">"Tipka Alt na fizičkoj tastaturi aktivira paletu za emoji"</string>
     <string name="button_default" msgid="3988017840431881491">"Zadano"</string>
     <string name="setup_welcome_title" msgid="6112821709832031715">"Dobro došli u aplikaciju <xliff:g id="APPLICATION_NAME">%s</xliff:g>"</string>
-    <string name="setup_welcome_additional_description" msgid="8150252008545768953">"s kucanjem pokretima"</string>
+    <string name="setup_welcome_additional_description" msgid="8150252008545768953">"s Pisanjem pokretima"</string>
     <string name="setup_start_action" msgid="8936036460897347708">"Započnite"</string>
     <string name="setup_next_action" msgid="371821437915144603">"Sljedeći korak"</string>
     <string name="setup_steps_title" msgid="6400373034871816182">"Postavljanje aplikacije <xliff:g id="APPLICATION_NAME">%s</xliff:g>"</string>
@@ -157,7 +157,7 @@
     <string name="setup_step3_action" msgid="600879797256942259">"Konfiguriraj dodatne jezike"</string>
     <string name="setup_finish_action" msgid="276559243409465389">"Završeno"</string>
     <string name="show_setup_wizard_icon" msgid="5008028590593710830">"Prikaži ikonu aplikacije"</string>
-    <string name="show_setup_wizard_icon_summary" msgid="4119998322536880213">"Prikaži ikonu aplikacije na pokretaču"</string>
+    <string name="show_setup_wizard_icon_summary" msgid="4119998322536880213">"Prikazivanje ikone aplikacije na pokretaču"</string>
     <string name="app_name" msgid="6320102637491234792">"Pružalac usluge rječnika"</string>
     <string name="dictionary_provider_name" msgid="3027315045397363079">"Pružalac usluge rječnika"</string>
     <string name="dictionary_service_name" msgid="6237472350693511448">"Usluga rječnika"</string>
